@@ -601,6 +601,8 @@ make_pe_info()
   pe_info->local_iter_nesting = -1;
   pe_info->iter_break = -1;
   pe_info->dolists = 0;
+  pe_info->switch_nesting = -1;
+  pe_info->local_switch_nesting = -1;
 
   return pe_info;
 }
@@ -614,6 +616,12 @@ free_pe_info(PE_Info *pe_info)
     int i;
     for (i = pe_info->iter_nesting; i >= 0; i--) {
       mush_free(pe_info->iter_itext[i], "dolist_arg");
+    }
+  }
+  if (pe_info->switch_nesting >= 0) {
+    int j;
+    for (j = pe_info->switch_nesting; j >= 0; j--) {
+      mush_free(pe_info->switch_text[j], "switch_arg");
     }
   }
   mush_free(pe_info, "process_expression.pe_info");
@@ -1060,6 +1068,31 @@ process_expression(char *buff, char **bp, char const **str,
               safe_str(T("#-1 ARGUMENT OUT OF RANGE"), buff, bp);
             } else {
               safe_str(pe_info->iter_itext[pe_info->iter_nesting - inum_this],
+                       buff, bp);
+            }
+          } else {
+            safe_str(T("#-1 ARGUMENT OUT OF RANGE"), buff, bp);
+          }
+          break;
+        case '$':
+          nextc = **str;
+          if (!nextc)
+            goto exit_sequence;
+          (*str)++;
+          if (pe_info->switch_nesting >= 0 && pe_info->local_switch_nesting >= 0) {
+            if (nextc == 'l') {
+              inum_this = pe_info->local_switch_nesting;
+            } else if (!isdigit((unsigned char) nextc)) {
+              safe_str(T(e_int), buff, bp);
+              break;
+            } else {
+              inum_this = nextc - '0';
+            }
+            if (inum_this < 0 || inum_this > pe_info->local_switch_nesting ||
+                (pe_info->local_switch_nesting - inum_this) < 0) {
+              safe_str(T("#-1 ARGUMENT OUT OF RANGE"), buff, bp);
+            } else {
+              safe_str(pe_info->switch_text[pe_info->switch_nesting - inum_this],
                        buff, bp);
             }
           } else {
